2006-05-10  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.10 : strap for the new 2.9.0 API.
	* generator/SymbolTable.cs : add GLib.InitiallyUnowned mapping.
	* glib/InitiallyUnowned.cs : new floating class "stub".
	* glib/Makefile.am : build new class.
	* gdk/gdk-api-2.10.raw: parse from 2.9.0
	* gtk/Gtk.metadata: cleanup conflicts in 2.10 API.
	* gtk/gtk-api-2.10.raw: parse from 2.9.0
	* pango/pango-api-2.10.raw: parse from 1.11.99
	* sources/Makefile.am : 2.10 parse setup and api-2.10 
	* sources/gtk_tree_model_signal_fix-2.10.patch : 2.10 patch.
	* sources/gtk-sharp-2.10-sources.xml : parse rules for 2.10

2006-05-08  Joe Shaw  <joeshaw@novell.com>

	* glib/ValueArray.cs: Don't immediately free ValueArrays; queue
	them up to be freed in the main thread by using a Timeout.  This
	fixes SMP deadlocks when the GValues contained therein aren't
	threadsafe (like GDK resources).  Fixes Novell bug #168650.

2006-05-04  Peter Johanson  <peter@peterjohanson.com>

	* gtk/glue/cellrenderer.c: Revert r59683, as it causes issues for
	overrides calling base.GetSize (), etc.

2006-05-03  Mike Kestner  <mkestner@novell.com>

	* gdk/Drawable.custom : remove manual DrawPoints impl.
	* gdk/Gdk.metadata : properly mark array and count params for
	Drawable.DrawPoints.

2006-05-02  Zac Bowling  <zac@zacbowling.com>

	* docs/en/Gdk/Drawable.xml
	* gdk/Drawable.custom
	* gdk/Gdk.metadata : Fix Drawable.DrawPoints points param signature.

2006-04-20  Peter Johanson  <peter@peterjohanson.com>

	* gtk/glue/cellrenderer.c: Make GetSize, Render, etc behave correctly
	for all cases. Fixes #77949.

2006-04-15  Zac Bowling	 <zac@zacbowling.com>
	
	* README.generator : Updated with link to GAPI guide on Wiki

2006-03-27  Mike Kestner  <mkestner@novell.com>

	* gnomevfs/MimeType.cs : remove string from all pinvoke sigs. now
	adheres to the const/non-const conventions specified in the vfs
	headers.  Fixes #77534.

2006-03-27  Mike Kestner  <mkestner@novell.com>
