@@ -1,3 +1,9 @@
+2006-06-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* glade/HandlerNotFoundExeception.cs:
+	* glade/XML.custom: provide a better error when the signature of a
+	handler does not match the one of the event.
+
 2006-05-10  Mike Kestner  <mkestner@novell.com>
 
 	* bootstrap-2.10 : strap for the new 2.9.0 API.
